--- a/index.html
+++ b/index.html
@@ -8,6 +8,33 @@
 </head>
 <body>
     <canvas id="gameCanvas" width="1200" height="800"></canvas>
+    <div id="controls">
+        <div class="keybind">
+            <img src="imgs/keyboard_key_d.png" alt="D Key" class="key-icon">
+            <img src="imgs/arrow-right.png" alt="Arrow Right" class="key-icon">
+            <span>Move Right</span>
+        </div>
+        <div class="keybind">
+            <img src="imgs/keyboard_key_a.png" alt="A Key" class="key-icon">
+            <img src="imgs/arrow-left.png" alt="Arrow Left" class="key-icon">
+            <span>Move Left</span>
+        </div>
+        <div class="keybind">
+            <img src="imgs/keyboard_key_space.png" alt="Spacebar" class="key-icon">
+            <img src="imgs/arrow-up.png" alt="Arrow Up" class="key-icon">
+            <span>Jump</span>
+        </div>
+        <div class="icon">
+            <img src="textures/checkpoint-touched.png" alt="Checkpoint Touched" class="icon-icon">
+            <img src="textures/checkpoint-untouched.png" alt="Checkpoint Untouched" class="icon-icon">
+            <span>Checkpoint</span>
+        </div>
+        <div class="icon">
+            <img src="textures/speed-boost.png" alt="Speed Bost" class="icon-icon">
+            <img src="textures/speed-boost-down.png" alt="Speed Nerf" class="icon-icon">
+            <span>Items</span>
+        </div>
+    </div>
     <script src="game.js"></script>
 </body>
 </html>
