--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
         <div class="icon">
             <img src="textures/speed-boost.png" alt="Speed Bost" class="icon-icon">
-            <img src="textures/speed-boost-down.png" alt="Speed Nerf" class="icon-icon">
+            <img src="textures/jump-boost.png" alt="Jump Boost" class="icon-icon">
             <span>Items</span>
         </div>
     </div>
