Started infinity level generation

--- a/index.html
+++ b/index.html
@@ -35,6 +35,6 @@
             <span>Items</span>
         </div>
     </div>
-    <script src="game.js"></script>
+    <script src="infinite.js"></script>
 </body>
 </html>
