--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>2D Platformer Game</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="./quicknav.js"></script>
 </head>
 
 <body>
@@ -15,6 +16,7 @@
             <div class="gamemodeSelector" id="levels">
                 <h2>Levels</h2>
                 <img src="imgs/icons8-schatzkarte-40.png" alt="Level Icon" class="gamemode-icon">
+                <p>1</p>
             </div>
         </a>
     </div>
@@ -23,6 +25,7 @@
         <div class="gamemodeSelector" id="infinite">
             <h2>Inifinite Generation</h2>
             <img src="imgs/icons8-unendlichkeit-50.png" alt="Infinity Icon" class="gamemode-icon">
+            <p>2</p>
         </div>
     </a>
     </div>
